@@ -4,9 +4,12 @@ karl package Changelog
 Unreleased
 ----------
 
+- Made profiles support multiple websites (LP #554018).
+
 - updated maintenance page (LP #587432)
 
-- Changed HTML ID for email icon in blog listing for customizations (LP #582500).
+- Changed HTML ID for email icon in blog listing for customizations
+  (LP #582500).
 
 - Added custom.css link into wsgi_errormsg.pt (LP #587104).
   
